add mongodb replica set

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,17 @@
 version: "3.8"
 services:
-  db:
-    image: postgres
-    environment:
-      POSTGRES_PASSWORD: Changeme1!
-      POSTGRES_USER: postgres
-      POSTGRES_DB: next-ts
-    volumes:
-      - ./pgdata:/var/lib/postresql/data
-    ports:
-      - '5432:5432'
   app:
     image: jbaczuk/docker-nextjs
-    depends_on:
-      - db
+    networks:
+      - default
+      - localmongo
+    external_links:
+      - localmongo1:mongo1
+      - localmongo2:mongo2
+      - localmongo3:mongo3
     ports:
       - '3000:3000'
+networks:
+  localmongo:
+    external:
+      name: localmongo_default
